--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 ---
 name: CommandBlocker
 version: 1.0.0
-api: 3.0.0-ALPHA10
+api: [3.0.0, 4.0.0]
 main: CommandBlocker\Main
 author: ArceusMatt
 ...
